Fixed the problem with the workouts not showing on the Homepage (problemn was that I accidentally removed the workouts.map() and passing each workout as a prop to the component), added the search for workout functionallity, made the delete button look like a trash icon.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,13 +34,16 @@ header a {
 
 /* homepage */
 .home {
-  display: grid;
-  grid-template-columns: 3fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-direction: column;
   gap: 100px;
 }
 .workout-details {
   background: #fff;
   border-radius: 4px;
+  width: 100%;
   margin: 20px auto;
   padding: 20px;
   position: relative;
@@ -108,8 +111,3 @@ div.error {
 }
 
 
-@media (max-width: 470px) {
-  .home {
-    grid-template-columns: 1fr;
-  }
-}
